--- a/css/app.css
+++ b/css/app.css
@@ -59,8 +59,11 @@ h2 {
     background-color: #800000;
 }
 #florida {
-    background-color: #800000;
+    background-color: #800700;
 }
 #Paris {
-    background-color: #800000;
+    background-color: #808000;
+}
+#Scotland {
+    background-color: #808500;
 }
